# intersection-of-triangles

./: CMakeLists.txt  README.md  text.txt
include/: input.h  intersection_check.h  line.h  matrix.h  point.h  triangle.h
src/: intersection_check.cpp  line.cpp  main.cpp  matrix.cpp  triangle.cpp
tests/: e2e_tests.cpp
